# IB_2023-2024

./: LICENSE.txt  README.md
Practica05/: arithmetic_operators.cc  boolean_operators.cc  desinflado.cc  integer-division-and-remainder-of-two-natural-numbers.cc
Practica06/: P34279.cc  P90615.cc  P97156.cc  P98960.cc
Practica07/: Ejercicio1.cc  Ejercicio2.cc  Ejercicio3.cc  Ejercicio4.cc  Ejercicio5.cc
Practica08/: Ejercicio calcular máximo y mínimo de un número.cpp  changeCase.cc  funtionEvaluation.cc  randomNumbers.cc  triangle-area.cc
Practica09/: capitalize_vowels.cc  hypotenuse.cc  scalar_product.cc
Practica10/: Ejercicio1.cc  Ejercicio1.h  Ejercicio2.cc  Ejercicio3.cc  Ejercicio4.cc
Practica11/Ejercicio01/Ejercicio1/: Ejercicio1.cc  Ejercicio1.h  Ejercicio1_main.cc
Practica11/Ejercicio02/Ejercicio2/: Ejercicio2.cc  Ejercicio2.h  Ejercicio2_main.cc
Practica11/Ejercicio03/Ejercicio3/: A.txt  Ejercicio3.cc  Ejercicio3.h  Ejercicio3_main.cc  S.txt  Texto.txt  a.out
Practica11/Ejercicio05/Ejercicio5/: crypto.cc  crypto.h  crypto_main.cc
Practica11/EjercicioPE/EjerciciosPE/: Ejercicio.cc  Ejercicio.h  Ejercicio_main.cc
Practica12/Ejercicio1/programa/: point2d.cc  point2d_main.cc
Practica12/Ejercicio2/programa/: circulo.cc  circulo.h  circulo_main.cc  point2d.cc  point2d.h
Practica12/Ejercicio3/programa/: numerosComplejos.cc  numerosComplejos.h  numerosComplejos_main.cc
Practica12/Ejercicio4/programa/: Fecha.cc  Fecha.h  (+2 more)
Practica12/EjercicioPE/: CMakeLists.txt
Practica12/EjercicioPE/src/: cilindro.cc  cilindro.h  cilindro_main.cc
